Started paragraphs about AD + HCP

--- a/latex/lib.bib
+++ b/latex/lib.bib
@@ -1,23 +1,58 @@
+@misc{nih_about, 
+    title={Who We Are}, 
+    url={https://www.nih.gov/about-nih/who-we-are}, 
+    journal={National Institutes of Health}, 
+    publisher={U.S. Department of Health and Human Services}
+}
 
-@article{POHLENZ2010560,
-    title = "Virtual dental surgery as a new educational tool in dental school",
-    journal = "Journal of Cranio-Maxillofacial Surgery",
-    volume = "38",
-    number = "8",
-    pages = "560 - 564",
-    year = "2010",
-    issn = "1010-5182",
-    doi = "https://doi.org/10.1016/j.jcms.2010.02.011",
-    url = "http://www.sciencedirect.com/science/article/pii/S1010518210000363",
-    author = "Philipp Pohlenz and Alexander Gröbe and Andreas Petersik and Norman [von Sternberg] and Bernhard Pflesser and Andreas Pommert and Karl-Heinz Höhne and Ulf Tiede and Ingo Springer and Max Heiland",
-    keywords = "virtual reality, computer simulation, dental education, oral surgery, apicectomy",
-    abstract = "Summary
-    Purpose
-    The virtual environment of the Voxel-Man simulator that was originally designed for virtual surgical procedures of the middle ear has been adapted to intraoral procedures. To assess application of the simulator to dentistry, virtual apicectomies were chosen as the pilot-test model.
-    Methods
-    A group of 53 dental students provided their impressions after virtual simulation of apicectomies in the Voxel-Man simulator.
-    Results
-    Fifty-one of the 53 students recommended the virtual simulation as an additional modality in dental education. The students indicated that the force feedback (e.g. simulation of haptic pressure), spatial 3D perception, and image resolution of the simulator were sufficient for virtual training of dental surgical procedures.
-    Conclusion
-    The feedback from dental students involved in this pilot-test has encouraged our interdisciplinary group to continue further development of the simulator with the goal of creating new training strategies in dental and medical education."
+@misc{nih_connectome, 
+    title={Connectome Programs}, 
+    url={https://neuroscienceblueprint.nih.gov/human-connectome/connectome-programs}, 
+    journal={National Institutes of Health}, 
+    publisher={U.S. Department of Health and Human Services}
+}
+
+@article{wuminn,
+    title = {The WU-Minn Human Connectome Project: An overview},
+    journal = "NeuroImage",
+    volume = "80",
+    pages = "62 - 79",
+    year = "2013",
+    note = "Mapping the Connectome",
+    issn = "1053-8119",
+    doi = "https://doi.org/10.1016/j.neuroimage.2013.05.041",
+    url = "http://www.sciencedirect.com/science/article/pii/S1053811913005351",
+    author = "David C. Van Essen and Stephen M. Smith and Deanna M. Barch and Timothy E.J. Berens and Essa Yacoub and Kamil Ugurbil"
+}
+
+@misc{ccf, 
+    title={Connectome - Homepage}, 
+    url={https://www.humanconnectome.org/}, 
+    journal={Human Connectome Project}, 
+    author={UpAndRunning}
+}
+
+@article{ad,
+    author = {Mito, Remika and Raffelt, David and Dhollander, Thijs and Vaughan, David N and Tournier, J-Donald and Salvado, Olivier and Brodtmann, Amy and Rowe, Christopher C and Villemagne, Victor L and Connelly, Alan},
+    title = "Fibre-specific white matter reductions in Alzheimer's disease and mild cognitive impairment",
+    journal = {Brain},
+    volume = {141},
+    number = {3},
+    pages = {888-902},
+    year = {2018},
+    month = {01}
+}
+
+@article{ad_haass,
+    author = {Haass, Christian},
+    title = {Alzheimer - Mechanismen und therapeutische Anseatze. Warum wir im Alter dement werden},
+    journal = {Biologie in unserer Zeit},
+    volume = {39},
+    number = {2},
+    pages = {92-100},
+    keywords = {Alzheimer, neurodegenerative Erkrankungen, beta-Amyloid, Demenz},
+    doi = {10.1002/biuz.200910388},
+    url = {https://onlinelibrary.wiley.com/doi/abs/10.1002/biuz.200910388},
+    eprint = {https://onlinelibrary.wiley.com/doi/pdf/10.1002/biuz.200910388},
+    year = {2009}
 }
