Finished first version of paragraph AD

--- a/latex/gloss_acr.tex
+++ b/latex/gloss_acr.tex
@@ -1,4 +1,11 @@
+\newacronym{mri}{MRI}{\gls{MRI}}
+\newacronym{dmri}{dMRI}{\gls{DMRI}}
+\newacronym{fa}{FA}{\gls{FA}}
+\newacronym{dti}{DTI}{\gls{DTI}}
+\newacronym{csd}{CSD}{\gls{CSD}}
+
 \newacronym{ad}{AD}{\Gls{AD}}
+\newacronym{fba}{FBA}{\gls{FBA}}
 
 \newacronym{nih}{NIH}{\Gls{NIH}}
 \newacronym{hcp}{HCP}{\Gls{HCP}}
