--- a/latex/gloss_terms.tex
+++ b/latex/gloss_terms.tex
@@ -1,3 +1,28 @@
+\newglossaryentry{MRI}{
+	name={magnetic resonance imaging},
+	description={non-invasive imaging technique including the use of high magnetic induction (~$ 1-7T $)}
+}
+
+\newglossaryentry{DMRI}{
+	name={Diffusion \Gls{MRI}},
+	description={imaging technique to determine diffusion of water in body tissues using \acrshort{mri}}
+}
+
+\newglossaryentry{FA}{
+	name={fractional anisotropy},
+	description={scalar metric for the directionality of diffusion; high values point to a constrained movement of particles like in an axon; low values point to a free movement of particles like in grey matter}
+}
+
+\newglossaryentry{DTI}{
+	name={diffusion tensor imaging},
+	description={imaging technique to determine main directions and strengths of water diffusion in tissue per voxel using \acrshort{dmri}}
+}
+
+\newglossaryentry{CSD}{
+	name={Constrained Spherical Deconvolution},
+	description={tba}
+}
+
 \newglossaryentry{AD}{
 	name={Alzheimer's Disease},
 	description={neurodegenerative disease, cf. \gls{AMYHYP}}
@@ -28,12 +53,7 @@
 	description={hypothesis naming the accumulation of amyloid-$ \beta $ peptide A$ \beta $42 in structures of the hippocampus, forebrain and neocortex as cause of \Gls{AD}}
 }
 
-\newglossaryentry{CSD}{
-	name={Constrained Spherical Deconvolution},
-	description={tba}
-}
-
 \newglossaryentry{FBA}{
-	name={Fixel-Based Analysis},
+	name={fixel-based analysis},
 	description={method for analyzing DWI data using constraint spherical deconvolution; ''fixel'' refers to a specific fibre population within a voxel; see \cite{ad}}
 }
