--- a/latex/lib.bib
+++ b/latex/lib.bib
@@ -50,9 +50,116 @@
     volume = {39},
     number = {2},
     pages = {92-100},
-    keywords = {Alzheimer, neurodegenerative Erkrankungen, beta-Amyloid, Demenz},
+    keywords = {Alzheimer, neurodegenerative Erkrankungen, $\beta$-Amyloid, Demenz},
     doi = {10.1002/biuz.200910388},
     url = {https://onlinelibrary.wiley.com/doi/abs/10.1002/biuz.200910388},
     eprint = {https://onlinelibrary.wiley.com/doi/pdf/10.1002/biuz.200910388},
     year = {2009}
+}
+
+@article {mintun06,
+    author = {Mintun, M. A. and LaRossa, G. N. and Sheline, Y. I. and Dence, C. S. and Lee, S. Y. and Mach, R. H. and Klunk, W. E. and Mathis, C. A. and DeKosky, S. T. and Morris, J. C.},
+    title = {[11C]PIB in a nondemented population},
+    volume = {67},
+    number = {3},
+    pages = {446--452},
+    year = {2006},
+    doi = {10.1212/01.wnl.0000228230.26044.a4},
+    publisher = {Wolters Kluwer Health, Inc. on behalf of the American Academy of Neurology},
+    issn = {0028-3878},
+    URL = {https://n.neurology.org/content/67/3/446},
+    eprint = {https://n.neurology.org/content/67/3/446.full.pdf},
+    journal = {Neurology}
+}
+
+@article{aizenstein08,
+    author = {Aizenstein, Howard Jay and Nebes, Robert D. and Saxton, Judith A. and Price, Julie C. and Mathis, Chester A. and Tsopelas, Nicholas D. and Ziolko, Scott K. and James, Jeffrey A. and Snitz, Beth E. and Houck, Patricia R. and Bi, Wenzhu and Cohen, Ann D. and Lopresti, Brian J. and DeKosky, Steven T. and Halligan, Edythe M. and Klunk, William E.},
+    title = "{Frequent Amyloid Deposition Without Significant Cognitive Impairment Among the Elderly}",
+    journal = {Archives of Neurology},
+    volume = {65},
+    number = {11},
+    pages = {1509-1517},
+    year = {2008},
+    month = {11},
+    issn = {0003-9942},
+    doi = {10.1001/archneur.65.11.1509},
+    url = {https://doi.org/10.1001/archneur.65.11.1509},
+    eprint = {https://jamanetwork.com/journals/jamaneurology/articlepdf/1107509/noc80049\_1509\_1517.pdf}
+}
+
+@article{rabinovici08,
+    author = {Rabinovici, Gil D. and Jagust, William J. and Furst, Ansgar J. and Ogar, Jennifer M. and Racine, Caroline A. and Mormino, Elizabeth C. and O'Neil, James P. and Lal, Rayhan A. and Dronkers, Nina F. and Miller, Bruce L. and Gorno-Tempini, Maria Luisa},
+    title = {A$\beta$ amyloid and glucose metabolism in three variants of primary progressive aphasia},
+    journal = {Annals of Neurology},
+    volume = {64},
+    number = {4},
+    pages = {388-401},
+    year = {2008},
+    doi = {10.1002/ana.21451},
+    url = {https://onlinelibrary.wiley.com/doi/abs/10.1002/ana.21451},
+    eprint = {https://onlinelibrary.wiley.com/doi/pdf/10.1002/ana.21451}
+}
+
+@article{rowe10,
+    title = "Amyloid imaging results from the Australian Imaging, Biomarkers and Lifestyle (AIBL) study of aging",
+    journal = "Neurobiology of Aging",
+    volume = "31",
+    number = "8",
+    pages = "1275 - 1283",
+    year = "2010",
+    note = "Alzheimer's Disease Neuroimaging Initiative (ADNI) Studies",
+    issn = "0197-4580",
+    doi = "https://doi.org/10.1016/j.neurobiolaging.2010.04.007",
+    url = "http://www.sciencedirect.com/science/article/pii/S0197458010001648",
+    author = "Christopher C. Rowe and Kathryn A. Ellis and Miroslava Rimajova and Pierrick Bourgeat and Kerryn E. Pike and Gareth Jones and Jurgen Fripp and Henri Tochon-Danguy and Laurence Morandeau and Graeme O'Keefe and Roger Price and Parnesh Raniga and Peter Robins and Oscar Acosta and Nat Lenzo and Cassandra Szoeke and Olivier Salvado and Richard Head and Ralph Martins and Colin L. Masters and David Ames and Victor L. Villemagne"
+}
+
+@article{raffelt17,
+    title = "Investigating white matter fibre density and morphology using fixel-based analysis",
+    journal = "NeuroImage",
+    volume = "144",
+    pages = "58 - 73",
+    year = "2017",
+    issn = "1053-8119",
+    doi = "https://doi.org/10.1016/j.neuroimage.2016.09.029",
+    url = "http://www.sciencedirect.com/science/article/pii/S1053811916304943",
+    author = "David A. Raffelt and J.-Donald Tournier and Robert E. Smith and David N. Vaughan and Graeme Jackson and Gerard R. Ridgway and Alan Connelly"
+}
+
+@article{leyton11,
+    author = {Leyton, Cristian and Villemagne, Victor and Savage, Sharon and Pike, Kerryn and Ballard, Kirrie and Piguet, Olivier and Burrell, James and Rowe, Christopher and John, R and Hodges,},
+    year = {2011},
+    month = {01},
+    pages = {},
+    title = {Subtypes of progressive aphasia: application of the international consensus criteria and validation using $\beta$-amyloid imaging},
+    journal = {Brain}
+}
+
+@article {rodrigue12,
+    author = {Rodrigue, K.M. and Kennedy, K.M. and Devous, M.D. and Rieck, J.R. and Hebrank, A.C. and Diaz-Arrastia, R. and Mathews, D. and Park, D.C.},
+    title = {$\beta$-Amyloid burden in healthy aging},
+    volume = {78},
+    number = {6},
+    pages = {387--395},
+    year = {2012},
+    doi = {10.1212/WNL.0b013e318245d295},
+    publisher = {Wolters Kluwer Health, Inc. on behalf of the American Academy of Neurology},
+    issn = {0028-3878},
+    URL = {https://n.neurology.org/content/78/6/387},
+    eprint = {https://n.neurology.org/content/78/6/387.full.pdf},
+    journal = {Neurology}
+}
+
+@article {canter16,
+    Title = {The road to restoring neural circuits for the treatment of Alzheimer's disease},
+    Author = {Canter, Rebecca G and Penney, Jay and Tsai, Li-Huei},
+    DOI = {10.1038/nature20412},
+    Number = {7628},
+    Volume = {539},
+    Month = {November},
+    Year = {2016},
+    Journal = {Nature},
+    ISSN = {0028-0836},
+    Pages = {187-196},
+    URL = {https://doi.org/10.1038/nature20412},
 }
