Section about MRI, dMRI

--- a/latex/gloss_terms.tex
+++ b/latex/gloss_terms.tex
@@ -4,7 +4,7 @@
 }
 
 \newglossaryentry{DMRI}{
-	name={Diffusion \Gls{MRI}},
+	name={Diffusion Weighted \Gls{MRI}},
 	description={imaging technique to determine diffusion of water in body tissues using \acrshort{mri}}
 }
 
