--- a/latex/lib.bib
+++ b/latex/lib.bib
@@ -163,3 +163,11 @@
     Pages = {187-196},
     URL = {https://doi.org/10.1038/nature20412},
 }
+
+@book{mri, 
+    place={Berlin}, 
+    title={How does MRI work?: an introduction to the physics and function of magnetic resonance imaging}, 
+    publisher={Springer}, 
+    author={Weishaupt, Dominik and Köchli Victor D. and Marincek, Borut}, 
+    year={2008}
+}
