post intermediate pres, clarification of task

--- a/latex/gloss_terms.tex
+++ b/latex/gloss_terms.tex
@@ -24,7 +24,7 @@
 }
 
 \newglossaryentry{AD}{
-	name={Alzheimer's Disease},
+	name={Alzheimers Disease},
 	description={neurodegenerative disease, cf. \gls{AMYHYP}}
 }
 
@@ -56,4 +56,9 @@
 \newglossaryentry{FBA}{
 	name={fixel-based analysis},
 	description={method for analyzing DWI data using constraint spherical deconvolution; ''fixel'' refers to a specific fibre population within a voxel; see \cite{ad}}
+}
+
+\newglossaryentry{ADNI}{
+	name={Alzheimers Disease Neuroimaging Initiative},
+	description={''longitudinal multicenter study designed to develop clinical, imaging, genetic, and biochemical biomarkers for the early detection and tracking of \acrfull{ad}''\newcite{adni_about}}
 }
