--- a/latex/lib.bib
+++ b/latex/lib.bib
@@ -1,15 +1,22 @@
 @misc{nih_about, 
-    title={Who We Are}, 
+    title={NIH Website / Who We Are}, 
     url={https://www.nih.gov/about-nih/who-we-are}, 
     journal={National Institutes of Health}, 
     publisher={U.S. Department of Health and Human Services}
 }
 
 @misc{nih_connectome, 
-    title={Connectome Programs}, 
+    title={NIH Website / Connectome Programs}, 
     url={https://neuroscienceblueprint.nih.gov/human-connectome/connectome-programs}, 
     journal={National Institutes of Health}, 
     publisher={U.S. Department of Health and Human Services}
+}
+
+@misc{adni_about,
+    title={ADNI Website / About},
+    url={http://adni.loni.usc.edu/about/},
+    journal={Alzheimer's Disease Neuroimaging Initiative},
+    publisher={Alzheimer's Disease Neuroimaging Initiative}
 }
 
 @article{wuminn,
@@ -170,4 +177,17 @@
     publisher={Springer}, 
     author={Weishaupt, Dominik and Köchli Victor D. and Marincek, Borut}, 
     year={2008}
+}
+
+@article{hcp_mpp,
+    title = "The minimal preprocessing pipelines for the Human Connectome Project",
+    journal = "NeuroImage",
+    volume = "80",
+    pages = "105 - 124",
+    year = "2013",
+    note = "Mapping the Connectome",
+    issn = "1053-8119",
+    doi = "https://doi.org/10.1016/j.neuroimage.2013.04.127",
+    url = "http://www.sciencedirect.com/science/article/pii/S1053811913005053",
+    author = "Matthew F. Glasser and Stamatios N. Sotiropoulos and J. Anthony Wilson and Timothy S. Coalson and Bruce Fischl and Jesper L. Andersson and Junqian Xu and Saad Jbabdi and Matthew Webster and Jonathan R. Polimeni and David C. [Van Essen] and Mark Jenkinson"
 }
